# apps/backend/api/openapi/openapi.yaml
@@ -656,6 +656,12 @@ paths:
           schema:
             type: string
             format: uuid
+        - name: exclude_archived_properties
+          in: query
+          required: false
+          schema:
+            type: boolean
+            default: false
         - name: sort
           in: query
           required: false
